default_old/objects/Stratics__c/Stratics__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Stratics</label>
</CustomObject>