default_old/objects/Stratics__c/fields/Account_id__c.field-meta.xml
<CustomField>
    <fullName>Account_id__c</fullName>
    <description>Account id</description>
    <inlineHelpText>Account id</inlineHelpText>
    <label>Account id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>