default_old/objects/Stratics__c/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <description>api key</description>
    <inlineHelpText>api key</inlineHelpText>
    <label>api key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>