default_old/objects/Stratics__c/fields/dnc_type__c.field-meta.xml
<CustomField>
    <fullName>dnc_type__c</fullName>
    <description>dnc type</description>
    <inlineHelpText>dnc type</inlineHelpText>
    <label>dnc type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>