default_old/objects/Stratics__c/fields/isLogSuccess__c.field-meta.xml
<CustomField>
    <fullName>isLogSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you want to log success ?</description>
    <inlineHelpText>Do you want to log success ?</inlineHelpText>
    <label>Do you want to log success ?</label>
    <type>Checkbox</type>
</CustomField>