default_old/objects/Stratics__c/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <description>reason</description>
    <inlineHelpText>reason</inlineHelpText>
    <label>reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>